@@ -1,6 +1,7 @@
 19.6.2013 git
 - deltasql pyclient written in Python can now use either MySQLdb or Oracle's mysql.connector as data connection layer to connect to MySQL database. 
   Users need to configure the variable pydbadapter in config.ini to choose their preferred connector.
+- initial experiments with dynamic entries in synchronization form dbsync.php  
 
 5.6.2013 web
 - patch 1 for Cancel Search link on navigation bar for 1.6.1 released
